// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`email template html is byte-stable > account-deleted 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta name="color-scheme" content="dark">
  <title>HushBox</title>
</head>
<body style="margin: 0; padding: 0; background-color: #0a0a0a; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;">
  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background-color: #0a0a0a;">
    <tr>
      <td align="center" style="padding: 40px 20px;">
        <table role="presentation" width="600" cellpadding="0" cellspacing="0" style="max-width: 600px; width: 100%;">
          <!-- Header -->
          <tr>
            <td align="center" style="padding: 20px 0; border-bottom: 1px solid #27272a;">
              <span style="font-size: 24px; font-weight: 700; color: #fafafa; letter-spacing: 2px; font-family: 'Merriweather', Georgia, serif;">Hush<span style="color: #ec4755;">Box</span></span>
            </td>
          </tr>
          <!-- Content Card -->
          <tr>
            <td style="padding: 40px 0;">
              <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background-color: #171717; border-radius: 12px; border: 1px solid #27272a;">
                <tr>
                  <td style="padding: 40px;">
                    
    <h1 style="margin: 0 0 16px 0; color: #fafafa; font-size: 24px; font-weight: 600;">
      Account Permanently Deleted
    </h1>
    <p style="margin: 0 0 16px 0; color: #a1a1aa; font-size: 16px; line-height: 1.5;">
      Your HushBox account has been permanently deleted. All conversations, messages, projects, and stored media have been removed from our servers.
    </p>
    <p style="margin: 0 0 16px 0; color: #a1a1aa; font-size: 14px; line-height: 1.5;">
      Financial records (payments, wallet ledger entries, usage history) are retained for audit and tax purposes, with your account identifier removed.
    </p>
    <p style="margin: 0; color: #a1a1aa; font-size: 12px; line-height: 1.5;">
      If this wasn't you, your account may have been compromised. Contact us immediately at <a href="mailto:security@hushbox.ai" style="color: #ec4755; text-decoration: none;">security@hushbox.ai</a>
    </p>
  
                  </td>
                </tr>
              </table>
            </td>
          </tr>
          <!-- Footer -->
          <tr>
            <td align="center" style="padding: 20px 0; border-top: 1px solid #27272a;">
              <p style="margin: 0 0 8px 0; color: #a1a1aa; font-size: 12px;">
                &copy; 2026 LOME-AI LLC
              </p>
              <p style="margin: 0; color: #a1a1aa; font-size: 12px;">
                Questions? <a href="mailto:hello@hushbox.ai" style="color: #ec4755; text-decoration: none;">hello@hushbox.ai</a>
              </p>
            </td>
          </tr>
        </table>
      </td>
    </tr>
  </table>
</body>
</html>"
`;

exports[`email template html is byte-stable > account-locked (login lockout) 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta name="color-scheme" content="dark">
  <title>HushBox</title>
</head>
<body style="margin: 0; padding: 0; background-color: #0a0a0a; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;">
  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background-color: #0a0a0a;">
    <tr>
      <td align="center" style="padding: 40px 20px;">
        <table role="presentation" width="600" cellpadding="0" cellspacing="0" style="max-width: 600px; width: 100%;">
          <!-- Header -->
          <tr>
            <td align="center" style="padding: 20px 0; border-bottom: 1px solid #27272a;">
              <span style="font-size: 24px; font-weight: 700; color: #fafafa; letter-spacing: 2px; font-family: 'Merriweather', Georgia, serif;">Hush<span style="color: #ec4755;">Box</span></span>
            </td>
          </tr>
          <!-- Content Card -->
          <tr>
            <td style="padding: 40px 0;">
              <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background-color: #171717; border-radius: 12px; border: 1px solid #27272a;">
                <tr>
                  <td style="padding: 40px;">
                    
    <h1 style="margin: 0 0 16px 0; color: #fafafa; font-size: 24px; font-weight: 600;">
      Account Temporarily Locked
    </h1>
    <p style="margin: 0 0 8px 0; color: #fafafa; font-size: 16px; line-height: 1.5;">
      Hi Sam,
    </p>
    <p style="margin: 0 0 16px 0; color: #a1a1aa; font-size: 16px; line-height: 1.5;">
      Your HushBox account has been temporarily locked due to multiple failed sign-in attempts.
    </p>
    <p style="margin: 0 0 16px 0; color: #a1a1aa; font-size: 14px; line-height: 1.5;">
      You can try again in 15 minutes.
    </p>
    <p style="margin: 0; color: #a1a1aa; font-size: 12px; line-height: 1.5;">
      If this wasn't you, someone may be trying to access your account. We recommend changing your password when the lockout expires.
    </p>
  
                  </td>
                </tr>
              </table>
            </td>
          </tr>
          <!-- Footer -->
          <tr>
            <td align="center" style="padding: 20px 0; border-top: 1px solid #27272a;">
              <p style="margin: 0 0 8px 0; color: #a1a1aa; font-size: 12px;">
                &copy; 2026 LOME-AI LLC
              </p>
              <p style="margin: 0; color: #a1a1aa; font-size: 12px;">
                Questions? <a href="mailto:hello@hushbox.ai" style="color: #ec4755; text-decoration: none;">hello@hushbox.ai</a>
              </p>
            </td>
          </tr>
        </table>
      </td>
    </tr>
  </table>
</body>
</html>"
`;

exports[`email template html is byte-stable > chargeback-lock 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta name="color-scheme" content="dark">
  <title>HushBox</title>
</head>
<body style="margin: 0; padding: 0; background-color: #0a0a0a; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;">
  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background-color: #0a0a0a;">
    <tr>
      <td align="center" style="padding: 40px 20px;">
        <table role="presentation" width="600" cellpadding="0" cellspacing="0" style="max-width: 600px; width: 100%;">
          <!-- Header -->
          <tr>
            <td align="center" style="padding: 20px 0; border-bottom: 1px solid #27272a;">
              <span style="font-size: 24px; font-weight: 700; color: #fafafa; letter-spacing: 2px; font-family: 'Merriweather', Georgia, serif;">Hush<span style="color: #ec4755;">Box</span></span>
            </td>
          </tr>
          <!-- Content Card -->
          <tr>
            <td style="padding: 40px 0;">
              <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background-color: #171717; border-radius: 12px; border: 1px solid #27272a;">
                <tr>
                  <td style="padding: 40px;">
                    
    <h1 style="margin: 0 0 16px 0; color: #fafafa; font-size: 24px; font-weight: 600;">
      Account Locked
    </h1>
    <p style="margin: 0 0 8px 0; color: #fafafa; font-size: 16px; line-height: 1.5;">
      Hi Sam,
    </p>
    <p style="margin: 0 0 16px 0; color: #a1a1aa; font-size: 16px; line-height: 1.5;">
      Your HushBox account has been locked because of a payment dispute on a recent charge.
    </p>
    <p style="margin: 0; color: #a1a1aa; font-size: 14px; line-height: 1.5;">
      The lock stays in place until the dispute is resolved. Contact us at <a href="mailto:billing@hushbox.ai" style="color: #ec4755; text-decoration: none;">billing@hushbox.ai</a> to resolve it.
    </p>
  
                  </td>
                </tr>
              </table>
            </td>
          </tr>
          <!-- Footer -->
          <tr>
            <td align="center" style="padding: 20px 0; border-top: 1px solid #27272a;">
              <p style="margin: 0 0 8px 0; color: #a1a1aa; font-size: 12px;">
                &copy; 2026 LOME-AI LLC
              </p>
              <p style="margin: 0; color: #a1a1aa; font-size: 12px;">
                Questions? <a href="mailto:hello@hushbox.ai" style="color: #ec4755; text-decoration: none;">hello@hushbox.ai</a>
              </p>
            </td>
          </tr>
        </table>
      </td>
    </tr>
  </table>
</body>
</html>"
`;

exports[`email template html is byte-stable > password-changed 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta name="color-scheme" content="dark">
  <title>HushBox</title>
</head>
<body style="margin: 0; padding: 0; background-color: #0a0a0a; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;">
  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background-color: #0a0a0a;">
    <tr>
      <td align="center" style="padding: 40px 20px;">
        <table role="presentation" width="600" cellpadding="0" cellspacing="0" style="max-width: 600px; width: 100%;">
          <!-- Header -->
          <tr>
            <td align="center" style="padding: 20px 0; border-bottom: 1px solid #27272a;">
              <span style="font-size: 24px; font-weight: 700; color: #fafafa; letter-spacing: 2px; font-family: 'Merriweather', Georgia, serif;">Hush<span style="color: #ec4755;">Box</span></span>
            </td>
          </tr>
          <!-- Content Card -->
          <tr>
            <td style="padding: 40px 0;">
              <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background-color: #171717; border-radius: 12px; border: 1px solid #27272a;">
                <tr>
                  <td style="padding: 40px;">
                    
    <h1 style="margin: 0 0 16px 0; color: #fafafa; font-size: 24px; font-weight: 600;">
      Password Changed
    </h1>
    <p style="margin: 0 0 8px 0; color: #fafafa; font-size: 16px; line-height: 1.5;">
      Hi Sam,
    </p>
    <p style="margin: 0 0 16px 0; color: #a1a1aa; font-size: 16px; line-height: 1.5;">
      Your password was just changed. All other sessions have been signed out.
    </p>
    <p style="margin: 0 0 16px 0; color: #a1a1aa; font-size: 14px; line-height: 1.5;">
      If this was you, no action is needed.
    </p>
    <p style="margin: 0; color: #a1a1aa; font-size: 12px; line-height: 1.5;">
      If you didn't change your password, your account may be compromised. Contact us immediately at <a href="mailto:security@hushbox.ai" style="color: #ec4755; text-decoration: none;">security@hushbox.ai</a>
    </p>
  
                  </td>
                </tr>
              </table>
            </td>
          </tr>
          <!-- Footer -->
          <tr>
            <td align="center" style="padding: 20px 0; border-top: 1px solid #27272a;">
              <p style="margin: 0 0 8px 0; color: #a1a1aa; font-size: 12px;">
                &copy; 2026 LOME-AI LLC
              </p>
              <p style="margin: 0; color: #a1a1aa; font-size: 12px;">
                Questions? <a href="mailto:hello@hushbox.ai" style="color: #ec4755; text-decoration: none;">hello@hushbox.ai</a>
              </p>
            </td>
          </tr>
        </table>
      </td>
    </tr>
  </table>
</body>
</html>"
`;

exports[`email template html is byte-stable > two-factor-disabled 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta name="color-scheme" content="dark">
  <title>HushBox</title>
</head>
<body style="margin: 0; padding: 0; background-color: #0a0a0a; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;">
  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background-color: #0a0a0a;">
    <tr>
      <td align="center" style="padding: 40px 20px;">
        <table role="presentation" width="600" cellpadding="0" cellspacing="0" style="max-width: 600px; width: 100%;">
          <!-- Header -->
          <tr>
            <td align="center" style="padding: 20px 0; border-bottom: 1px solid #27272a;">
              <span style="font-size: 24px; font-weight: 700; color: #fafafa; letter-spacing: 2px; font-family: 'Merriweather', Georgia, serif;">Hush<span style="color: #ec4755;">Box</span></span>
            </td>
          </tr>
          <!-- Content Card -->
          <tr>
            <td style="padding: 40px 0;">
              <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background-color: #171717; border-radius: 12px; border: 1px solid #27272a;">
                <tr>
                  <td style="padding: 40px;">
                    
    <h1 style="margin: 0 0 16px 0; color: #fafafa; font-size: 24px; font-weight: 600;">
      Two-Factor Authentication Disabled
    </h1>
    <p style="margin: 0 0 8px 0; color: #fafafa; font-size: 16px; line-height: 1.5;">
      Hi Sam,
    </p>
    <p style="margin: 0 0 16px 0; color: #a1a1aa; font-size: 16px; line-height: 1.5;">
      Two-factor authentication has been removed from your account. Your account is now protected by password only.
    </p>
    <p style="margin: 0 0 16px 0; color: #a1a1aa; font-size: 14px; line-height: 1.5;">
      We recommend re-enabling 2FA in your account settings for maximum security.
    </p>
    <p style="margin: 0; color: #a1a1aa; font-size: 12px; line-height: 1.5;">
      If you didn't disable this, contact us immediately at <a href="mailto:security@hushbox.ai" style="color: #ec4755; text-decoration: none;">security@hushbox.ai</a>
    </p>
  
                  </td>
                </tr>
              </table>
            </td>
          </tr>
          <!-- Footer -->
          <tr>
            <td align="center" style="padding: 20px 0; border-top: 1px solid #27272a;">
              <p style="margin: 0 0 8px 0; color: #a1a1aa; font-size: 12px;">
                &copy; 2026 LOME-AI LLC
              </p>
              <p style="margin: 0; color: #a1a1aa; font-size: 12px;">
                Questions? <a href="mailto:hello@hushbox.ai" style="color: #ec4755; text-decoration: none;">hello@hushbox.ai</a>
              </p>
            </td>
          </tr>
        </table>
      </td>
    </tr>
  </table>
</body>
</html>"
`;

exports[`email template html is byte-stable > two-factor-enabled 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta name="color-scheme" content="dark">
  <title>HushBox</title>
</head>
<body style="margin: 0; padding: 0; background-color: #0a0a0a; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;">
  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background-color: #0a0a0a;">
    <tr>
      <td align="center" style="padding: 40px 20px;">
        <table role="presentation" width="600" cellpadding="0" cellspacing="0" style="max-width: 600px; width: 100%;">
          <!-- Header -->
          <tr>
            <td align="center" style="padding: 20px 0; border-bottom: 1px solid #27272a;">
              <span style="font-size: 24px; font-weight: 700; color: #fafafa; letter-spacing: 2px; font-family: 'Merriweather', Georgia, serif;">Hush<span style="color: #ec4755;">Box</span></span>
            </td>
          </tr>
          <!-- Content Card -->
          <tr>
            <td style="padding: 40px 0;">
              <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background-color: #171717; border-radius: 12px; border: 1px solid #27272a;">
                <tr>
                  <td style="padding: 40px;">
                    
    <h1 style="margin: 0 0 16px 0; color: #fafafa; font-size: 24px; font-weight: 600;">
      Two-Factor Authentication Enabled
    </h1>
    <p style="margin: 0 0 8px 0; color: #fafafa; font-size: 16px; line-height: 1.5;">
      Hi Sam,
    </p>
    <p style="margin: 0 0 16px 0; color: #a1a1aa; font-size: 16px; line-height: 1.5;">
      Two-factor authentication has been enabled on your account. You'll need your authenticator app to sign in from now on.
    </p>
    <p style="margin: 0; color: #a1a1aa; font-size: 12px; line-height: 1.5;">
      If you didn't enable this, contact us immediately at <a href="mailto:security@hushbox.ai" style="color: #ec4755; text-decoration: none;">security@hushbox.ai</a>
    </p>
  
                  </td>
                </tr>
              </table>
            </td>
          </tr>
          <!-- Footer -->
          <tr>
            <td align="center" style="padding: 20px 0; border-top: 1px solid #27272a;">
              <p style="margin: 0 0 8px 0; color: #a1a1aa; font-size: 12px;">
                &copy; 2026 LOME-AI LLC
              </p>
              <p style="margin: 0; color: #a1a1aa; font-size: 12px;">
                Questions? <a href="mailto:hello@hushbox.ai" style="color: #ec4755; text-decoration: none;">hello@hushbox.ai</a>
              </p>
            </td>
          </tr>
        </table>
      </td>
    </tr>
  </table>
</body>
</html>"
`;

exports[`email template html is byte-stable > welcome 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta name="color-scheme" content="dark">
  <title>HushBox</title>
</head>
<body style="margin: 0; padding: 0; background-color: #0a0a0a; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;">
  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background-color: #0a0a0a;">
    <tr>
      <td align="center" style="padding: 40px 20px;">
        <table role="presentation" width="600" cellpadding="0" cellspacing="0" style="max-width: 600px; width: 100%;">
          <!-- Header -->
          <tr>
            <td align="center" style="padding: 20px 0; border-bottom: 1px solid #27272a;">
              <span style="font-size: 24px; font-weight: 700; color: #fafafa; letter-spacing: 2px; font-family: 'Merriweather', Georgia, serif;">Hush<span style="color: #ec4755;">Box</span></span>
            </td>
          </tr>
          <!-- Content Card -->
          <tr>
            <td style="padding: 40px 0;">
              <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background-color: #171717; border-radius: 12px; border: 1px solid #27272a;">
                <tr>
                  <td style="padding: 40px;">
                    
    <h1 style="margin: 0 0 16px 0; color: #fafafa; font-size: 24px; font-weight: 600;">
      Welcome to HushBox
    </h1>
    <p style="margin: 0 0 8px 0; color: #fafafa; font-size: 16px; line-height: 1.5;">
      Hi Sam,
    </p>
    <p style="margin: 0 0 16px 0; color: #a1a1aa; font-size: 16px; line-height: 1.5;">
      One interface. Every feature. Private.
    </p>

    <h2 style="margin: 0 0 8px 0; color: #fafafa; font-size: 18px; font-weight: 600;">
      How Billing Works
    </h2>
    <p style="margin: 0 0 8px 0; color: #a1a1aa; font-size: 14px; line-height: 1.5;">
      HushBox is pay-as-you-go. No subscriptions, no recurring charges. Add credits when you need them &mdash; they never expire.
    </p>
    <p style="margin: 0 0 4px 0; color: #a1a1aa; font-size: 14px; line-height: 1.5;">
      We charge a transparent 15% fee on AI model usage:
    </p>
    <table role="presentation" cellpadding="0" cellspacing="0" style="margin: 0 0 16px 16px;">
      <tr>
        <td style="color: #ec4755; font-size: 14px; padding: 2px 8px 2px 0; vertical-align: top;">&#8226;</td>
        <td style="color: #a1a1aa; font-size: 14px; line-height: 1.5;">5% &mdash; HushBox</td>
      </tr>
      <tr>
        <td style="color: #ec4755; font-size: 14px; padding: 2px 8px 2px 0; vertical-align: top;">&#8226;</td>
        <td style="color: #a1a1aa; font-size: 14px; line-height: 1.5;">4.5% &mdash; Card processing</td>
      </tr>
      <tr>
        <td style="color: #ec4755; font-size: 14px; padding: 2px 8px 2px 0; vertical-align: top;">&#8226;</td>
        <td style="color: #a1a1aa; font-size: 14px; line-height: 1.5;">5.5% &mdash; Provider overhead</td>
      </tr>
    </table>

    <h2 style="margin: 0 0 8px 0; color: #fafafa; font-size: 18px; font-weight: 600;">
      Adding Credits
    </h2>
    <p style="margin: 0 0 16px 0; color: #a1a1aa; font-size: 14px; line-height: 1.5;">
      Visit the Billing page to add credits with any card. Your credits never expire and are ready to use across all models.
    </p>

    <h2 style="margin: 0 0 8px 0; color: #fafafa; font-size: 18px; font-weight: 600;">
      For Mobile App Users
    </h2>
    <p style="margin: 0 0 16px 0; color: #a1a1aa; font-size: 14px; line-height: 1.5;">
      Tap &ldquo;Manage Balance Online&rdquo; to add credits through our website. We route you to the web to avoid passing high in-app processing fees on to you &mdash; keeping your costs low.
    </p>
  
                  </td>
                </tr>
              </table>
            </td>
          </tr>
          <!-- Footer -->
          <tr>
            <td align="center" style="padding: 20px 0; border-top: 1px solid #27272a;">
              <p style="margin: 0 0 8px 0; color: #a1a1aa; font-size: 12px;">
                &copy; 2026 LOME-AI LLC
              </p>
              <p style="margin: 0; color: #a1a1aa; font-size: 12px;">
                Questions? <a href="mailto:hello@hushbox.ai" style="color: #ec4755; text-decoration: none;">hello@hushbox.ai</a>
              </p>
            </td>
          </tr>
        </table>
      </td>
    </tr>
  </table>
</body>
</html>"
`;
